; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_lasi_82596.c_mpu_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_lasi_82596.c_mpu_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i64 }
%struct.i596_private = type { i32 }

@OPT_SWAP_PORT = common dso_local global i32 0, align 4
@PA_CPU_PORT_L_ACCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32, i64)* @mpu_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpu_port(%struct.net_device* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.i596_private*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %11 = load %struct.net_device*, %struct.net_device** %4, align 8
  %12 = call %struct.i596_private* @netdev_priv(%struct.net_device* %11)
  store %struct.i596_private* %12, %struct.i596_private** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i64, i64* %6, align 8
  %15 = trunc i64 %14 to i32
  %16 = or i32 %13, %15
  store i32 %16, i32* %8, align 4
  %17 = load %struct.i596_private*, %struct.i596_private** %7, align 8
  %18 = getelementptr inbounds %struct.i596_private, %struct.i596_private* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @OPT_SWAP_PORT, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %3
  %24 = load i32, i32* %8, align 4
  %25 = ashr i32 %24, 16
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %8, align 4
  %27 = and i32 %26, 65535
  store i32 %27, i32* %10, align 4
  br label %33

28:                                               ; preds = %3
  %29 = load i32, i32* %8, align 4
  %30 = and i32 %29, 65535
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %8, align 4
  %32 = ashr i32 %31, 16
  store i32 %32, i32* %10, align 4
  br label %33

33:                                               ; preds = %28, %23
  %34 = load i32, i32* %9, align 4
  %35 = load %struct.net_device*, %struct.net_device** %4, align 8
  %36 = getelementptr inbounds %struct.net_device, %struct.net_device* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @PA_CPU_PORT_L_ACCESS, align 8
  %39 = add nsw i64 %37, %38
  %40 = call i32 @gsc_writel(i32 %34, i64 %39)
  %41 = call i32 @udelay(i32 1)
  %42 = load i32, i32* %10, align 4
  %43 = load %struct.net_device*, %struct.net_device** %4, align 8
  %44 = getelementptr inbounds %struct.net_device, %struct.net_device* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* @PA_CPU_PORT_L_ACCESS, align 8
  %47 = add nsw i64 %45, %46
  %48 = call i32 @gsc_writel(i32 %42, i64 %47)
  ret void
}

declare dso_local %struct.i596_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @gsc_writel(i32, i64) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
